less-2/service_apache.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: apache
  name: apache
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: apache
  type: ClusterIP
status:
  loadBalancer: {}
