less-2/ingress_cannary_always.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cannary
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-pattern: "always"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: apache
             port:
                number: 80
